app/scss/_skills.scss
.skills {
  scroll-margin-block-start: 3rem;
}

.skills-box {
  min-height: 51.4rem;
}

.skills-grid {
  display: grid;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
  grid-template-rows: repeat(auto-fill, minmax(10rem, 1fr));

  @include breakpoint-down(small) {
    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
    grid-template-rows: repeat(auto-fill, minmax(8rem, 1fr));
  }
}

.skills-grid-cell {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  @include breakpoint-up(medium) {
    transition: transform 150ms ease-in-out;

    &:hover,
    &:focus {
      transform: scale(1.2);
    }
  }
}

.skills-text {
  font-size: $font-medlrg;
  font-weight: 300;
  text-align: center;
  color: var(--font-color);
}

.skills-icon {
  border-radius: 5px;
  height: 5rem;
  width: auto;

  &.semi-wide-skill {
    scale: 0.9;
  }

  &.wide-skill {
    scale: 0.7;
  }

  &.saturate {
    filter: saturate(2);
  }

  &.whiten {
    filter: saturate(2);
  }

  &.marked {
    &.invert {
      filter: invert(1);
    }

    &.invert-whiten {
      filter: invert(1) saturate(2) brightness(300%);
    }
  }

  &.aws {
    &.top {
      margin-bottom: -5rem;
      clip-path: inset(0 0 35px 0);

      @include breakpoint-down(xsmall) {
        margin-bottom: -3.85rem;
        clip-path: inset(0 0 30px 0);
      }
    }

    &.bottom {
      clip-path: inset(45px 0 10px 0);

      @include breakpoint-down(xsmall) {
        clip-path: inset(35px 0 10px 0);
      }
    }
  }

  &.under-construction {
    filter: grayscale(1);
  }

  &.construction {
    position: relative;
    margin-top: -5rem;
    border-radius: 100% 70%;

    @include breakpoint-down(xsmall) {
      margin-bottom: -3.85rem;
    }
  }

  @include breakpoint-down(xsmall) {
    height: 4rem;
  }
}

.button-signature-wrapper {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;

  @include breakpoint-down(mdsmall) {
    flex-direction: column;
  }
}

.signature {
  font-family: "Corinthia", cursive;
  font-size: $font-xlg;
  color: var(--font-color);
  font-weight: 700;
  margin: 0;
  padding: 1rem 0;

  @include breakpoint-down(medium) {
    font-size: $font-lrgmed;
  }

  @include breakpoint-down(xsmall) {
    font-size: $font-lrgr;
  }
}

.skills-line {
  border: 1px solid var(--bg-color-main);
  border-radius: 5px;
  margin-top: 3rem;
  margin-bottom: 1rem;
}

